<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_account_balance"
        android:icon="@drawable/ic_account_balance_black_24dp"
        android:title="@string/menu_accounts"
        />

    <item
        android:id="@+id/nav_transactions_history"
        android:icon="@drawable/ic_show_chart_black_24dp"
        android:title="@string/menu_transactions"
        />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/menu_profile"
        />

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_help_outline_black_24dp"
        android:title="@string/menu_about"
        />

</menu>
